Fix: 발음 이슈 상세 조회 시 학습 여부 포함